--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/692bd46f11.js"
       crossorigin="anonymous"
